# video2image

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: 6973a72d-a645-4e5b-8098-39215649669d.yaml  a03f9607-7225-49c7-aed9-5e1ea8b58f7e.yaml  dd1a3360-fdb5-4fa7-9329-e83b62fa0bbc.yaml  python-publish.yml
video2image/: __init__.py  converter.py
video2images/: converter.py
